# probabilistic-stock-volatility-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: future_forecasts.parquet  metrics_summary.json  results.parquet
configs/: default.yaml
gp_volatility_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  baselines.py  data.py  eval.py  utils.py
src/dashboard/: app.py
src/models/: gp.py
tests/: test_features.py  test_metrics.py
